--- a/Análise_Descritiva_exame.ipynb
+++ b/Análise_Descritiva_exame.ipynb
@@ -239,7 +239,9 @@
         "colab": {}
       },
       "source": [
-        ""
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import seaborn as sns"
       ],
       "execution_count": 0,
       "outputs": []
@@ -262,7 +264,7 @@
         "colab": {}
       },
       "source": [
-        ""
+        "data = pd.read_csv('dados.csv')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -283,13 +285,118 @@
         "colab_type": "code",
         "id": "GsC_WhLFjQKq",
         "scrolled": true,
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 198
+        },
+        "outputId": "109a5651-41cb-4380-e964-074c0c83cf19"
       },
       "source": [
-        ""
+        "data.head()"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>UF</th>\n",
+              "      <th>Sexo</th>\n",
+              "      <th>Idade</th>\n",
+              "      <th>Cor</th>\n",
+              "      <th>Anos de Estudo</th>\n",
+              "      <th>Renda</th>\n",
+              "      <th>Altura</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>11</td>\n",
+              "      <td>0</td>\n",
+              "      <td>23</td>\n",
+              "      <td>8</td>\n",
+              "      <td>12</td>\n",
+              "      <td>800</td>\n",
+              "      <td>1.603808</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>11</td>\n",
+              "      <td>1</td>\n",
+              "      <td>23</td>\n",
+              "      <td>2</td>\n",
+              "      <td>12</td>\n",
+              "      <td>1150</td>\n",
+              "      <td>1.739790</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>11</td>\n",
+              "      <td>1</td>\n",
+              "      <td>35</td>\n",
+              "      <td>8</td>\n",
+              "      <td>15</td>\n",
+              "      <td>880</td>\n",
+              "      <td>1.760444</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>11</td>\n",
+              "      <td>0</td>\n",
+              "      <td>46</td>\n",
+              "      <td>2</td>\n",
+              "      <td>6</td>\n",
+              "      <td>3500</td>\n",
+              "      <td>1.783158</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>11</td>\n",
+              "      <td>1</td>\n",
+              "      <td>47</td>\n",
+              "      <td>8</td>\n",
+              "      <td>9</td>\n",
+              "      <td>150</td>\n",
+              "      <td>1.690631</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   UF  Sexo  Idade  Cor  Anos de Estudo  Renda    Altura\n",
+              "0  11     0     23    8              12    800  1.603808\n",
+              "1  11     1     23    2              12   1150  1.739790\n",
+              "2  11     1     35    8              15    880  1.760444\n",
+              "3  11     0     46    2               6   3500  1.783158\n",
+              "4  11     1     47    8               9    150  1.690631"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -336,7 +443,7 @@
         "colab": {}
       },
       "source": [
-        ""
+        "classes = [0, 1576, 3152, 7880, 15760, 200000]"
       ],
       "execution_count": 0,
       "outputs": []
@@ -359,7 +466,7 @@
         "colab": {}
       },
       "source": [
-        ""
+        "labels = ['E', 'D', 'C', 'B', 'A']"
       ],
       "execution_count": 0,
       "outputs": []
@@ -379,13 +486,43 @@
       "metadata": {
         "colab_type": "code",
         "id": "uSztBoqOTg1x",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 126
+        },
+        "outputId": "a83c2ce9-f00d-4a36-d1bf-a91986731d59"
       },
       "source": [
-        ""
+        "frequencia = pd.value_counts(\n",
+        "  pd.cut( x=data.Renda,\n",
+        "          bins=classes,\n",
+        "          labels=labels,\n",
+        "          include_lowest=True\n",
+        "        )\n",
+        ")\n",
+        "\n",
+        "frequencia"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "E    49755\n",
+              "D    16700\n",
+              "C     7599\n",
+              "B     2178\n",
+              "A      608\n",
+              "Name: Renda, dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 17
+        }
+      ]
     },
     {
       "cell_type": "markdown",
