--- a/Curso_de_Estatística_Parte_2.ipynb
+++ b/Curso_de_Estatística_Parte_2.ipynb
@@ -505,7 +505,7 @@
         "combinacoes = comb(25, 20)\n",
         "combinacoes"
       ],
-      "execution_count": 2,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -536,7 +536,7 @@
         "probabilidade = 1 / combinacoes\n",
         "print('%0.15f' % probabilidade)"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -592,7 +592,7 @@
         "n = 10\n",
         "n"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -674,7 +674,7 @@
         "p = 1 / numero_alternatias_por_questao\n",
         "p"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -715,7 +715,7 @@
         "q = 1 - p\n",
         "q"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -756,7 +756,7 @@
         "k = 5\n",
         "k"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -797,7 +797,7 @@
         "probabilidade = (comb(n, k) * (p ** k) * (q ** (n-k)))\n",
         "print('%0.8f' % probabilidade)"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -857,7 +857,7 @@
         "probabilidade = binom.pmf(k, n, p)\n",
         "print('%0.8f' % probabilidade)"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -902,7 +902,7 @@
       "source": [
         "binom.pmf(5, n, p) +  binom.pmf(6, n, p) +  binom.pmf(7, n, p) +  binom.pmf(8, n, p) +  binom.pmf(9, n, p) +  binom.pmf(10, n, p)"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -932,7 +932,7 @@
       "source": [
         "binom.pmf([5,6,7,8,9,10], n, p).sum()"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -962,7 +962,7 @@
       "source": [
         " 1 - binom.cdf(4, n, p)"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -992,7 +992,7 @@
       "source": [
         "binom.sf(4, n, p)"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1082,17 +1082,17 @@
       "metadata": {
         "colab_type": "code",
         "id": "ZAoBvbQqG3C9",
+        "outputId": "20aea89c-4dc4-4847-8681-d0347a38e7a3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "20aea89c-4dc4-4847-8681-d0347a38e7a3"
+        }
       },
       "source": [
         "probabilidade = binom.pmf(k, n, p) # calcúlo da minha probalidade\n",
         "print('%0.8f' % probabilidade)"
       ],
-      "execution_count": 19,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1108,17 +1108,17 @@
       "metadata": {
         "colab_type": "code",
         "id": "Tg53uGL4G3DA",
+        "outputId": "2cdbc008-11e5-4f25-abfa-e7a6bb2f9bcb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "2cdbc008-11e5-4f25-abfa-e7a6bb2f9bcb"
+        }
       },
       "source": [
         "equipes =  probabilidade * 30 #média da distribuição binomial (média deu ma pouplação)\n",
         "equipes"
       ],
-      "execution_count": 23,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1301,7 +1301,7 @@
         "colab": {}
       },
       "source": [
-        ""
+        "import numpy as np"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1311,13 +1311,30 @@
       "metadata": {
         "colab_type": "code",
         "id": "rdNqMuFNG3DU",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "72542984-5223-4ae1-90aa-b58741f628bd"
       },
       "source": [
-        ""
+        "np.e"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2.718281828459045"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 3
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1354,13 +1371,31 @@
       "metadata": {
         "colab_type": "code",
         "id": "2fVfJxdSG3DY",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "7234ce05-cdf2-4ab0-ce6c-e219a00d8025"
       },
       "source": [
-        ""
+        "media = 20\n",
+        "media"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "20"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1377,13 +1412,31 @@
       "metadata": {
         "colab_type": "code",
         "id": "yXB3QhWyG3Da",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "0308d92a-0270-4e9d-a497-a1c1071ae4c3"
       },
       "source": [
-        ""
+        "k = 15\n",
+        "k"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "15"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1400,13 +1453,26 @@
       "metadata": {
         "colab_type": "code",
         "id": "IEGO31WCG3Df",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "923f3f02-5d65-4179-ce85-523b5717b993"
       },
       "source": [
-        ""
+        "probabilidade = ((np.e ** (-media)) * (media ** k)) / (np.math.factorial(k))\n",
+        "print('%0.8f' % probabilidade)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0.05164885\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1446,20 +1512,35 @@
         "colab": {}
       },
       "source": [
-        ""
+        "from scipy.stats import poisson"
       ],
       "execution_count": 0,
       "outputs": []
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
-        "colab_type": "text",
-        "id": "g3ng8tQFG3Do"
+        "id": "a_5tL1H9YYtC",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "709e558a-acde-453d-f7b4-7db9a947a27c"
       },
       "source": [
-        "---\n",
-        "---"
+        "probabilidade = poisson.pmf(k, media)\n",
+        "print(\"{0:.2%}\".format(probabilidade))"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "5.16%\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
@@ -1680,11 +1761,11 @@
       "metadata": {
         "colab_type": "code",
         "id": "7SudUNlcG3D4",
+        "outputId": "7bc6821c-5447-419b-b927-9bca84d50f9b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "7bc6821c-5447-419b-b927-9bca84d50f9b"
+        }
       },
       "source": [
         "import pandas as pd\n",
@@ -1705,7 +1786,7 @@
         "\n",
         "tabela_normal_padronizada"
       ],
-      "execution_count": 15,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
