--- a/Curso_de_Estatística_Parte_2.ipynb
+++ b/Curso_de_Estatística_Parte_2.ipynb
@@ -1546,6 +1546,25 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "ESmMkZwVbQKc",
+        "colab_type": "text"
+      },
+      "source": [
+        "A obter as probabilidades em problemas, como os seguintes:\n",
+        "\n",
+        "\n",
+        "*   Determinação do número de clientes que entram em uma loja em determinada hora\n",
+        "*   Número de carros que chegam em um drive-thru de uma lanchonete na hora do almoço\n",
+        "*   Determinação do número de acidentes registrados em um trecho de estrada\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "colab_type": "text",
         "id": "tVPUT9kEG3Dp"
       },
