--- a/Curso_de_Estatística_Parte_2.ipynb
+++ b/Curso_de_Estatística_Parte_2.ipynb
@@ -1550,7 +1550,7 @@
         "colab_type": "text"
       },
       "source": [
-        "A obter as probabilidades em problemas, como os seguintes:\n",
+        "**A distribuição de Poisson ajuda à obter as probabilidades em problemas, como os seguintes:**\n",
         "\n",
         "\n",
         "*   Determinação do número de clientes que entram em uma loja em determinada hora\n",
