--- a/Curso de estatistica/Curso_de_Estatística_Parte_2.ipynb
+++ b/Curso de estatistica/Curso_de_Estatística_Parte_2.ipynb
@@ -2492,7 +2492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -2505,7 +2505,7 @@
        "0.1"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2517,7 +2517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -2530,7 +2530,7 @@
        "1.0000000000000009"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2552,7 +2552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -2565,7 +2565,7 @@
        "0.8413"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2587,7 +2587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -2600,7 +2600,7 @@
        "0.8413447460685431"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2642,25 +2642,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "mxPsPIOYG3Er"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1.0"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Z_inferior = (1.6 - media) / desvio_padrao\n",
+    "round(Z_inferior, 2)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "s0Vf0GXHG3Et"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Z_superior = (1.8 - media) / desvio_padrao\n",
+    "round(Z_superior, 2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2674,14 +2702,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "swZ6SVQGG3E0"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6826000000000001"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "probabilidade = (0.8413 - 0.5) * 2\n",
+    "probabilidade"
+   ]
   },
   {
    "cell_type": "code",
@@ -2706,25 +2748,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "hcps6lkNG3E3"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6826894921370863"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "probabilidade = norm.cdf(Z_superior) - (1 - norm.cdf(Z_superior))\n",
+    "probabilidade"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "MjEfhnQEG3E5"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6826894921370857"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "probabilidade = norm.cdf(Z_superior) - norm.cdf(Z_inferior)\n",
+    "probabilidade"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2758,14 +2828,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "3OVj60MzG3E_"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.9999999999999996"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Z = (1.9 - media) / desvio_padrao\n",
+    "Z"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2779,14 +2863,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "mSNfoO6VG3FC"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.28"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "probabilidade = 1 - 0.9772\n",
+    "round(probabilidade * 100, 2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2800,25 +2898,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "caIE-t83G3FF"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.28"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "probabilidade = 1 - norm.cdf(z)\n",
+    "round(probabilidade * 100, 2)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "wKjqQGgMG3FI"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.28"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "probabilidade = norm.cdf(-z)\n",
+    "round(probabilidade * 100, 2)"
+   ]
   },
   {
    "cell_type": "markdown",
