--- a/Curso_de_Estatística_Parte_3.ipynb
+++ b/Curso_de_Estatística_Parte_3.ipynb
@@ -236,7 +236,8 @@
         "colab": {}
       },
       "source": [
-        "import pandas as pd\n"
+        "import pandas as pd\n",
+        "import numpy as np"
       ],
       "execution_count": 0,
       "outputs": []
@@ -259,7 +260,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "GsC_WhLFjQKq",
-        "outputId": "32027fdd-e3b8-4df8-c6c4-478a98174e71",
+        "outputId": "1fc04a36-fab5-43ee-8316-6afce51425ba",
         "scrolled": true,
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -477,7 +478,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "IZpa91lHpsi_",
-        "outputId": "17b75602-d9c6-46a1-cdfd-2a60528645cb",
+        "outputId": "8aafe7cd-d7e8-4bc0-fce3-7e220965fe0d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 282
@@ -492,7 +493,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7f47bc556c50>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f779be81358>"
             ]
           },
           "metadata": {
@@ -531,7 +532,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "060ahVrrpsjD",
-        "outputId": "893405d2-c86c-438b-b0a7-9fa221cfa5f9",
+        "outputId": "d42179c2-b07d-4caa-f08b-e8a8296b00df",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -542,7 +543,7 @@
         "print(\"stat_teste: \", stat_teste)\n",
         "print(\"p_valor \", p_valor)"
       ],
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -559,7 +560,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "Q4eJFGsCpsjG",
-        "outputId": "5d7367ea-346a-4b01-eb8f-55aa812096b8",
+        "outputId": "9ee6440a-7ebe-44f4-8587-a61d1b9b4d4f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -568,7 +569,7 @@
       "source": [
         "p_valor <= significancia"
       ],
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -580,7 +581,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 9
+          "execution_count": 8
         }
       ]
     },
@@ -599,7 +600,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "n9r88dMKpsjN",
-        "outputId": "f2affa4f-b32a-4b38-df2c-6c6981f07f03",
+        "outputId": "e971b340-f339-4194-8c47-e15eefacb75c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 282
@@ -608,19 +609,19 @@
       "source": [
         "dados.Altura.hist(bins=50)"
       ],
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.axes._subplots.AxesSubplot at 0x7f47bbf7af60>"
+              "<matplotlib.axes._subplots.AxesSubplot at 0x7f779b904dd8>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 9
         },
         {
           "output_type": "display_data",
@@ -653,7 +654,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "aV9fx6w5psjb",
-        "outputId": "a6d1fa8d-2d71-4f31-b306-599c8bfaac80",
+        "outputId": "60803921-899e-4e27-e227-74a70f2bb69c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -664,7 +665,7 @@
         "print(\"stat_teste: \", stat_teste)\n",
         "print(\"p_valor \", p_valor)"
       ],
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -681,7 +682,7 @@
       "metadata": {
         "colab_type": "code",
         "id": "pP-NZCthpsje",
-        "outputId": "da1287e8-73ab-4358-c187-1bec44af84db",
+        "outputId": "482a19bd-4f59-433f-b42c-52a071e4f29b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -690,7 +691,7 @@
       "source": [
         "p_valor <= significancia"
       ],
-      "execution_count": 12,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -702,7 +703,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 11
         }
       ]
     },
@@ -892,7 +893,11 @@
         "colab": {}
       },
       "source": [
-        ""
+        "amostra = [509, 505, 495, 510, 496, 509, 497, 502, 503, 505, \n",
+        "           501, 505, 510, 505, 504, 497, 506, 506, 508, 505, \n",
+        "           497, 504, 500, 498, 506, 496, 508, 497, 503, 501, \n",
+        "           503, 506, 499, 498, 509, 507, 503, 499, 509, 495, \n",
+        "           502, 505, 504, 509, 508, 501, 505, 497, 508, 507]"
       ],
       "execution_count": 0,
       "outputs": []
@@ -902,40 +907,146 @@
       "metadata": {
         "colab_type": "code",
         "id": "AJNH5RQtpsju",
+        "outputId": "c6a21b04-92e5-40a9-99a4-3d9dbddb2bf0",
         "scrolled": false,
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        }
       },
       "source": [
-        ""
+        "amostra = pd.DataFrame(amostra, columns=['Amostra'])\n",
+        "amostra.head()"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Amostra</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>509</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>505</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>495</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>510</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>496</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   Amostra\n",
+              "0      509\n",
+              "1      505\n",
+              "2      495\n",
+              "3      510\n",
+              "4      496"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 13
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
         "id": "tnjD0A_ppsjw",
-        "colab": {}
+        "outputId": "a7c3dbbd-8d08-4deb-f083-2177de4a0bfd",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
-        ""
+        "media_amostra = amostra.mean()[0]\n",
+        "media_amostra"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "503.24"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
         "id": "JXz2IFCUpsjy",
-        "colab": {}
+        "outputId": "dd3424ff-bfd0-4f27-ace3-1a0334d78ef4",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
-        ""
+        "desvio_padrao_amostra = amostra.std()[0]\n",
+        "desvio_padrao_amostra"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "4.483803050527347"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 15
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -945,7 +1056,10 @@
         "colab": {}
       },
       "source": [
-        ""
+        "media = 500\n",
+        "significancia = 0.05\n",
+        "confianca = 1 - significancia\n",
+        "n = 50"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1047,7 +1161,7 @@
         "colab": {}
       },
       "source": [
-        ""
+        "from scipy.stats import norm"
       ],
       "execution_count": 0,
       "outputs": []
@@ -1057,13 +1171,31 @@
       "metadata": {
         "colab_type": "code",
         "id": "2JyYCHeQpsj8",
-        "colab": {}
+        "outputId": "c49c41d7-451f-4abc-be10-950367bb335a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
-        ""
+        "probabilidade = (0.5 + (confianca / 2))\n",
+        "probabilidade"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.975"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 18
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1080,13 +1212,31 @@
       "metadata": {
         "colab_type": "code",
         "id": "imc3GyDLpsj_",
-        "colab": {}
+        "outputId": "324a1ad7-747a-489d-8c61-74e569d77e1a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
-        ""
+        "z_alpha_2 = norm.ppf(probabilidade)\n",
+        "z_alpha_2"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.959963984540054"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 19
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1125,13 +1275,31 @@
       "metadata": {
         "colab_type": "code",
         "id": "a6zMj0YzpskC",
-        "colab": {}
+        "outputId": "bc5f8828-9111-4109-ab2e-75ed93868211",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
-        ""
+        "z = (media_amostra - media) / (desvio_padrao_amostra / np.sqrt(n))\n",
+        "z"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5.109559775991877"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 20
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1191,26 +1359,60 @@
       "metadata": {
         "colab_type": "code",
         "id": "-MkJyqSupskG",
-        "colab": {}
+        "outputId": "a64b6379-74cc-4803-81f5-fa3f40d35b41",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
-        ""
+        "z <= -z_alpha_2"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 21
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
         "id": "FVTIIXA3pskI",
-        "colab": {}
+        "outputId": "d3c00d1d-5915-4cd9-90b8-27334401ab41",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
       },
       "source": [
-        ""
+        "z >= z_alpha_2"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 22
+        }
+      ]
     },
     {
       "cell_type": "markdown",
