--- a/Curso_de_Estatística_Parte_3.ipynb
+++ b/Curso_de_Estatística_Parte_3.ipynb
@@ -1271,11 +1271,21 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "colab_type": "text",
+        "id": "UMHqgrlupskE"
+      },
+      "source": [
+        "![Estatística-Teste](https://caelum-online-public.s3.amazonaws.com/1229-estatistica-parte3/01/img007.png)"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
         "id": "a6zMj0YzpskC",
-        "outputId": "bc5f8828-9111-4109-ab2e-75ed93868211",
+        "outputId": "d0b911e7-5e8a-478d-d4ee-82ce181d1318",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -1285,7 +1295,7 @@
         "z = (media_amostra - media) / (desvio_padrao_amostra / np.sqrt(n))\n",
         "z"
       ],
-      "execution_count": 20,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1297,18 +1307,155 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 20
+          "execution_count": 23
         }
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "colab_type": "text",
-        "id": "UMHqgrlupskE"
+        "id": "MK5qqsKUqqCr",
+        "colab_type": "text"
       },
       "source": [
-        "![Estatística-Teste](https://caelum-online-public.s3.amazonaws.com/1229-estatistica-parte3/01/img007.png)"
+        "### Primeiro exercicio de teste paramétrico"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "v1EeLlHzoklg",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "a503a37b-cf87-4951-f9c8-e1d80e0b2173"
+      },
+      "source": [
+        "media_amostra = 485\n",
+        "n = 30\n",
+        "media = 500\n",
+        "desvio_padrao_populacional = 20\n",
+        "significancia = 0.05\n",
+        "confianca = 1 - significancia\n",
+        "\n",
+        "z = (media_amostra - media) / (desvio_padrao_populacional / np.sqrt(n))\n",
+        "z"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-4.107919181288746"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "90Qd4XlmpPjw",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "59ed16bf-0919-4fd8-c5bb-bbdbb5858baf"
+      },
+      "source": [
+        "probabilidade = (0.5 + (confianca / 2))\n",
+        "probabilidade"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.975"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_N6xGO0ZpmPa",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "7f6e8187-bf32-49c0-ffd0-85760d688b0d"
+      },
+      "source": [
+        "z_alpha_2 = norm.ppf(probabilidade)\n",
+        "z_alpha_2"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.959963984540054"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JmhcnnhYp6dS",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "0d2187c5-f242-423c-a428-e868151de3b4"
+      },
+      "source": [
+        "print('z <= -z_alpha_2 === ', z <= -z_alpha_2) # Rejeitar H0\n",
+        "print('z >= z_alpha_2 === ', z >= z_alpha_2)"
+      ],
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "z <= -z_alpha_2 ===  True\n",
+            "z >= z_alpha_2 ===  False\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JT2N1V-6rb0-",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Fim do primeiro exercicio de teste paramétrico**"
       ]
     },
     {
